[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameUI.gd" type="Script" id=1]
[ext_resource path="res://Art/Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Art/Fonts/Audiowide-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 3
font_data = ExtResource( 3 )

[node name="GameUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Title" type="ColorRect" parent="."]
margin_right = 155.0
margin_bottom = 128.0
color = Color( 0.027451, 0.027451, 0.027451, 1 )

[node name="TitleText" type="Label" parent="Title"]
margin_right = 155.0
margin_bottom = 128.0
text = "2048"
align = 1
valign = 1

[node name="Score" type="ColorRect" parent="."]
margin_left = 320.0
margin_right = 512.0
margin_bottom = 64.0
color = Color( 0.0431373, 0.0431373, 0.0431373, 1 )

[node name="ScoreText" type="Label" parent="Score"]
margin_right = 192.0
margin_bottom = 64.0
text = "Score: 2"
align = 1
valign = 1

[node name="HighScore" type="ColorRect" parent="."]
margin_left = 320.0
margin_top = 64.0
margin_right = 512.0
margin_bottom = 128.0
color = Color( 0.505882, 0.478431, 0.0117647, 1 )

[node name="HighScoreText" type="Label" parent="HighScore"]
margin_right = 192.0
margin_bottom = 64.0
text = "Score: 2"
align = 1
valign = 1

[node name="Retry" type="Button" parent="."]
margin_left = 155.0
margin_top = 64.0
margin_right = 320.0
margin_bottom = 128.0
text = "Retry"

[node name="MainMenu" type="Button" parent="."]
margin_left = 155.0
margin_right = 320.0
margin_bottom = 64.0
text = "Menu"

[node name="Message" type="Label" parent="."]
margin_left = 64.0
margin_top = 192.0
margin_right = 448.0
margin_bottom = 448.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Out of Moves 
Try Again!"
align = 1
valign = 1

[node name="MuteMusic" type="Button" parent="."]
margin_left = 448.0
margin_top = 736.0
margin_right = 560.0
margin_bottom = 776.0
text = "Music: On"

[node name="MuteAudio" type="Button" parent="."]
margin_left = 32.0
margin_top = 736.0
margin_right = 224.0
margin_bottom = 776.0
custom_fonts/font = ExtResource( 2 )
text = "Sound Effects: On"

[connection signal="pressed" from="Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="MuteMusic" to="." method="_on_MuteMusic_pressed"]
[connection signal="toggled" from="MuteMusic" to="." method="_on_MuteMusic_toggled"]
[connection signal="pressed" from="MuteAudio" to="." method="_on_MuteAudio_pressed"]
